squash theming and override bugs

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -20,101 +20,4 @@ body {
   }
 }
 
-.pink-theme {
-  button {
-    background-color: $color-brand-pink;
-  }
-
-  input[type="text"],
-  textarea {
-    &:focus {
-      border-left-color: $color-brand-pink;
-    }
-  }
-}
-
-.green-theme {
-  button {
-    background-color: $color-brand-green;
-  }
-
-  input[type="text"],
-  textarea {
-    &:focus {
-      border-left-color: $color-brand-green;
-    }
-  }
-}
-
-.red-theme {
-
-  button {
-    background-color: $color-brand-red;
-  }
-
-  input[type="text"],
-  textarea {
-    &:focus {
-      border-left-color: $color-brand-red;
-    }
-  }
-}
-
-.blue-theme {
-  a,
-  a:active,
-  a:visited {
-    color: $color-brand-blue;
-  }
-
-  button {
-    background-color: $color-brand-blue;
-  }
-
-  input[type="text"],
-  textarea {
-    &:focus {
-      border-left-color: $color-brand-blue;
-    }
-  }
-}
-
-.yellow-theme {
-  a,
-  a:active,
-  a:visited {
-    color: $color-brand-yellow;
-  }
-
-  button {
-    background-color: $color-brand-yellow;
-  }
-
-  input[type="text"],
-  textarea {
-    &:focus {
-      border-left-color: $color-brand-yellow;
-    }
-  }
-}
-
-.purple-theme {
-  a,
-  a:active,
-  a:visited {
-    color: $color-brand-purple;
-  }
-
-  button {
-    background-color: $color-brand-purple;
-  }
-
-  input[type="text"],
-  textarea {
-    &:focus {
-      border-left-color: $color-brand-purple;
-    }
-  }
-}
-
 
