--- a/scss/components/_links.scss
+++ b/scss/components/_links.scss
@@ -46,9 +46,9 @@ a {
     position: relative;
 
     &:after {
-      font-family: 'AND-Digital-Icons';
+      font-family: $brand-font-family-icons;
       display: inline-block;
-      content: "\e946";
+      content: $link-secondary-icon;
       position: absolute;
       right: -2em;
       bottom: 0;
@@ -68,20 +68,17 @@ a {
 
   &-external {
     &:after {
-      content: "\e944";
+      content: $link-external-icon;
       display: inline-block;
-      font-family: 'AND-Digital-Icons';
+      font-family: $brand-font-family-icons;
       margin-left: 4px;
     }
   }
 }
 
 .section-red,
-.section-yellow,
-.section-green,
 .section-blue,
 .section-purple,
-.section-pink,
 .section-charcoal {
   a,
   a:active,
@@ -104,7 +101,8 @@ a {
 }
 
 .section-yellow,
-.section-pink {
+.section-pink,
+.section-green{
   a,
   a:active,
   a:visited {
@@ -112,13 +110,6 @@ a {
     border-color: $color-brand-charcoal;
   }
 
-  .link-primary {
-    color: $color-brand-charcoal;
-    border-color: $color-brand-charcoal;
-  }
-}
-
-.section-green {
   .link-primary {
     color: $color-brand-charcoal;
     border-color: $color-brand-charcoal;
@@ -223,3 +214,97 @@ a {
   }
 }
 
+.red-theme,
+.blue-theme,
+.pink-theme,
+.yellow-theme,
+.purple-theme,
+.green-theme {
+  .red-theme {
+    .link-primary {
+      border-color: $color-brand-red;
+      color: $color-brand-red;
+    }
+    a {
+      color: $color-brand-red;
+    }
+  }
+  .blue-theme {
+    .link-primary {
+      border-color: $color-brand-blue;
+      color: $color-brand-blue;
+    }
+    a {
+      color: $color-brand-blue;
+    }
+  }
+  .pink-theme {
+    .link-primary {
+      border-color: $color-brand-pink;
+      color: $color-brand-pink;
+    }
+    a {
+      color: $color-brand-pink;
+    }
+  }
+  .yellow-theme {
+    .link-primary {
+      border-color: $color-brand-yellow;
+      color: $color-brand-yellow;
+    }
+    a {
+      color: $color-brand-yellow;
+    }
+  }
+  .purple-theme {
+    .link-primary {
+      border-color: $color-brand-purple;
+      color: $color-brand-purple;
+    }
+    a {
+      color: $color-brand-purple;
+    }
+  }
+  .green-theme {
+    .link-primary {
+      border-color: $color-brand-green;
+      color: $color-brand-green;
+    }
+    a {
+      color: $color-brand-green;
+    }
+  }
+
+  .section-yellow,
+  .section-pink,
+  .section-green{
+    a,
+    a:active,
+    a:visited {
+      color: $color-brand-charcoal;
+      border-color: $color-brand-charcoal;
+    }
+
+    .link-primary {
+      color: $color-brand-charcoal;
+      border-color: $color-brand-charcoal;
+    }
+  }
+
+  .section-red,
+  .section-blue,
+  .section-purple,
+  .section-charcoal {
+    a,
+    a:active,
+    a:visited {
+      color: $color-white;
+      border-color: $color-white;
+    }
+
+    .link-primary {
+      color: $color-white;
+      border-color: $color-white;
+    }
+  }
+}
